# crewOne

latest_ai_development/output/: report.md
rdgov/: README.md  pyproject.toml
rdgov/output/: blogpost.md  report.md
rdgov/src/rdgov/: crew.py  main.py
rdgov/src/rdgov/config/: agents.yaml  tasks.yaml
scraperev/scraperev/: README.md  pyproject.toml
scraperev/scraperev/src/scraperev/: crew.py  main.py
