[project]
name = "rdgov"
version = "0.1.0"
description = "rdgov using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
rdgov = "rdgov.main:run"
run_crew = "rdgov.main:run"
train = "rdgov.main:train"
replay = "rdgov.main:replay"
test = "rdgov.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
