[project]
name = "scraperev"
version = "0.1.0"
description = "scraperev using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
scraperev = "scraperev.main:run"
run_crew = "scraperev.main:run"
train = "scraperev.main:train"
replay = "scraperev.main:replay"
test = "scraperev.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
